core-components/argocd/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
annotations:
  cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: argocd.mrcontainer.nl
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
